fix: alignment

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,9 @@
   main {
     margin-top: 120px;
     display: flex;
-    justify-content: left;
-    flex-direction: row;
+    align-content: center;
+    flex-direction: column;
     max-height: 75%;
-    flex-wrap: wrap;
   }
 }
 
